[workspace]
members = ["ggwave-cli"]

[package]
name = "ggwave-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for ggwave, a library that encodes data into audio waveforms"
license = "MIT"
repository = "https://github.com/aramd/ggwave-rs"
readme = "README.md"
keywords = ["audio", "ggwave", "ffi", "sound", "data-over-sound"]
categories = ["multimedia::audio", "external-ffi-bindings"]
authors = ["Aram Danielyan <aram.danielyan86@gmail.com>"]
build = "build.rs"

[lib]
path = "src/lib.rs"
name = "ggwave_rs"

[features]
default = ["vendored"]
vendored = []
system = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
