[package]
name = "ggwave-cli"
version = "0.1.1"
edition = "2021"
description = "CLI tool for encoding/decoding data via audio waveforms using ggwave"
license = "MIT"
repository = "https://github.com/aramd/ggwave-rs"
keywords = ["audio", "ggwave", "cli", "sound", "wav"]
categories = ["command-line-utilities", "multimedia::audio"]
authors = ["Aram Danielyan <aram.danielyan86@gmail.com>"]

[[bin]]
name = "ggwave"
path = "src/main.rs"

[dependencies]
ggwave-rs = { path = ".." }
clap = { version = "4", features = ["derive"] }
hound = "3.5"
